<resources>
    <string name="app_name">Consensus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Historial</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Send</string>

    <string name="user">Usuario</string>
    <string name="pass">Password</string>

    <string name="no_user">introduzca un usuario</string>
    <string name="no_pass">introduzca una contraseña</string>

    <string name="onboarding_start">Empezar</string>
    <string name="onboarding_1_title">Cada voto es importante</string>
    <string name="onboarding_1_desc">Todos  somos y aportamos</string>
    <string name="onboarding_2_title">Unidos somos mejores</string>
    <string name="onboarding_2_desc">Contribuimos mejorando nuestro sistema judicial</string>
    <string name="options">Opciones</string>

    <string name="rb_structure">¿Tiene el documento la estructura correcta?</string>
    <string name="rb_redaction">¿Está el documento correctamente redactado?</string>
    <string name="rb_implication">¿Está en desacuerdo con las implicaciones del documento?</string>

    <string name="rb_structure_a">¿Tiene el artículo la estructura correcta?</string>
    <string name="rb_redaction_a">¿Está el artículo correctamente redactado?</string>
    <string name="rb_implication_a">¿Está en desacuerdo con las implicaciones del artículo?</string>

    <string name="rb_true">Sí</string>
    <string name="rb_false">No</string>

    <string name="bt_login">Login</string>
    <string name="bt_vote">Enviar votación</string>
    <string name="document_validate">Validar</string>
    <string name="logout">Logout</string>

</resources>
